--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/db6/hsqldb-2.4.0/hsqldb/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="C:/db6/hsqldb-2.4.0/hsqldb/lib/hsqldb.jar" sourcepath="C:/Users/kadac/AppData/Local/Temp/.org.sf.feeling.decompiler1515345314907/source/hsqldb-2.4.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
